--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -97,16 +97,52 @@ jobs:
       with:
         context: .
         push: false
+        load: true  # This loads the image into local Docker daemon
         tags: portfolio:latest
         cache-from: type=gha
         cache-to: type=gha,mode=max
         
     - name: Test Docker image
       run: |
+        # Start container in background
         docker run -d --name test-container -p 8080:80 portfolio:latest
-        sleep 10
-        curl -f http://localhost:8080/health || exit 1
+        
+        # Wait for container to be ready
+        echo "Waiting for container to start..."
+        sleep 15
+        
+        # Check if container is running
+        if ! docker ps | grep -q test-container; then
+          echo "Container failed to start. Logs:"
+          docker logs test-container
+          exit 1
+        fi
+        
+        # Test if the application is responding
+        echo "Testing application response..."
+        max_attempts=10
+        attempt=1
+        
+        while [ $attempt -le $max_attempts ]; do
+          if curl -f http://localhost:8080/ > /dev/null 2>&1; then
+            echo "✅ Application is responding!"
+            break
+          elif [ $attempt -eq $max_attempts ]; then
+            echo "❌ Application not responding after $max_attempts attempts"
+            echo "Container logs:"
+            docker logs test-container
+            docker stop test-container
+            exit 1
+          else
+            echo "Attempt $attempt/$max_attempts: Application not ready yet, waiting..."
+            sleep 3
+            attempt=$((attempt + 1))
+          fi
+        done
+        
+        # Cleanup
         docker stop test-container
+        docker rm test-container
 
   deploy:
     runs-on: ubuntu-latest
