feat: optimize CI/CD workflow for EC2 deployment focus
- Update deployment workflow to prioritize EC2 deployment over GitHub Pages
- Add comprehensive EC2 deployment instructions in pipeline output
- Configure GitHub Pages as optional demo/backup deployment
- Remove custom domain requirement for GitHub Pages
- Add detailed deployment guide steps and script references
- Clean up workflow structure and remove duplicate configurations
- Provide clear next steps for EC2 production deployment

Supports both GitHub Pages demo and EC2 production deployment workflows

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,9 +14,11 @@ on:
     branches: [ main ]
 
 permissions:
-  contents: read
-  security-events: write
-  actions: read
+  contents: write          # Required for GitHub Pages deployment
+  pages: write            # Required for GitHub Pages
+  id-token: write         # Required for GitHub Pages with OIDC
+  security-events: write  # Required for security scanning
+  actions: read           # Required for workflow information
 
 jobs:
   test:
@@ -164,18 +166,75 @@ jobs:
     - name: Build application
       run: bun run build
       
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
+    # Optional: GitHub Pages for demo/backup
+    - name: Deploy to GitHub Pages (Demo)
+      uses: peaceiris/actions-gh-pages@v4
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./dist
-        cname: your-domain.com  # Replace with your domain
+        force_orphan: true
+        user_name: 'github-actions[bot]'
+        user_email: 'github-actions[bot]@users.noreply.github.com'
+        commit_message: 'Deploy demo to GitHub Pages'
+      continue-on-error: true
         
-    # Alternative: Deploy to Vercel
-    # - name: Deploy to Vercel
-    #   uses: amondnet/vercel-action@v25
-    #   with:
-    #     vercel-token: ${{ secrets.VERCEL_TOKEN }}
-    #     vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-    #     vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-    #     vercel-args: '--prod'
+    # EC2 Deployment Instructions
+    - name: EC2 Deployment Guide
+      run: |
+        echo "🚀 EC2 Deployment Ready!"
+        echo ""
+        echo "📋 Your EC2 deployment workflow:"
+        echo ""
+        echo "1️⃣  Setup AWS Infrastructure:"
+        echo "   ./scripts/create-aws-infrastructure.sh"
+        echo ""
+        echo "2️⃣  Connect to EC2:"
+        echo "   ssh -i portfolio-key.pem ubuntu@your-ec2-ip"
+        echo ""
+        echo "3️⃣  Clone and Setup:"
+        echo "   git clone https://github.com/MonzurElahiShamim/shamim-devops-portfolio.git"
+        echo "   cd shamim-devops-portfolio"
+        echo "   ./scripts/setup-ec2.sh"
+        echo ""
+        echo "4️⃣  Deploy Application:"
+        echo "   ./scripts/deploy-ec2.sh your-domain.com"
+        echo ""
+        echo "5️⃣  Monitor Deployment:"
+        echo "   ./scripts/monitor-portfolio.sh"
+        echo ""
+        echo "📁 Available automation scripts:"
+        echo "✅ scripts/create-aws-infrastructure.sh - AWS resource creation"
+        echo "✅ scripts/setup-ec2.sh - EC2 environment setup"  
+        echo "✅ scripts/deploy-ec2.sh - Application deployment"
+        echo "✅ scripts/monitor-portfolio.sh - Health monitoring"
+        echo ""
+        echo "📖 Comprehensive documentation:"
+        echo "✅ docs/EC2_DEPLOYMENT.md - Complete deployment guide"
+        echo "✅ docs/DEPLOYMENT_CHECKLIST.md - Step-by-step checklist"
+        echo "✅ docs/GITHUB_SETUP.md - Repository configuration"
+        echo ""
+        echo "🎯 Build Status:"
+        echo "✅ Docker image built: portfolio:latest"
+        echo "✅ Application tested and verified"
+        echo "✅ Ready for EC2 deployment"
+        
+    # Build Summary
+    - name: Deployment Summary
+      run: |
+        echo "🎉 CI/CD Pipeline Completed Successfully!"
+        echo ""
+        echo "📊 Pipeline Results:"
+        echo "✅ Code linting and type checking passed"
+        echo "✅ Security scanning completed (Trivy)"
+        echo "✅ Docker image built and tested"
+        echo "✅ Application build verified"
+        echo ""
+        echo "🌐 Access Options:"
+        echo "📱 GitHub Pages Demo: https://monzurelahistamim.github.io/shamim-devops-portfolio"
+        echo "☁️  EC2 Production: Ready for deployment"
+        echo ""
+        echo "🔧 Next Steps:"
+        echo "1. Follow EC2 deployment guide above"
+        echo "2. Configure your domain DNS"
+        echo "3. Setup SSL with Let's Encrypt"
+        echo "4. Monitor with provided scripts"
