fix: configure correct base path for GitHub Pages deployment
- Add production mode base path '/shamim-devops-portfolio/' to vite.config.ts
- Ensure assets are correctly referenced with repository prefix
- Add NODE_ENV=production to CI/CD build step
- This resolves the blank page issue on GitHub Pages

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -165,6 +165,8 @@ jobs:
       
     - name: Build application
       run: bun run build
+      env:
+        NODE_ENV: production
       
     # Optional: GitHub Pages for demo/backup
     - name: Deploy to GitHub Pages (Demo)
