--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -164,7 +164,7 @@ jobs:
       run: bun install
       
     - name: Build application
-      run: bun run build
+      run: bun run build:github
       env:
         NODE_ENV: production
       
