feat: Add environment-specific build scripts
- Add build-ec2.sh for EC2 direct deployment with deployment instructions
- Add build-github.sh for GitHub Pages with correct base path
- Add build-docker.sh for Docker containerization and deployment
- Add build-universal.sh as interactive script for environment selection
- Update build.sh to use universal script for backward compatibility
- Update package.json with new build script references
- Update README.md with comprehensive build script documentation

Each script is optimized for its target environment and provides
clear deployment instructions to eliminate deployment confusion.

--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build --mode production",
-    "build:ec2": "vite build --mode production",
-    "build:github": "vite build --mode github-pages",
+    "build:ec2": "./scripts/build-ec2.sh",
+    "build:github": "./scripts/build-github.sh",
+    "build:docker": "./scripts/build-docker.sh",
+    "build:universal": "./scripts/build-universal.sh",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
