🌐 Update domain configuration to monzurs.me
✨ Changes:
- Fix recursive loop in build-github.sh script (was causing GitHub Actions to fail)
- Update vite.config.ts to use monzurs.me/shamim-devops-portfolio/ for GitHub Pages
- Update all meta tags in index.html with new domain URLs
- Update GitHub Actions workflow to show correct demo URL
- Update build script messaging with new domain

🎯 Benefits:
- GitHub Actions will now deploy successfully
- Portfolio will be available at https://monzurs.me/shamim-devops-portfolio/
- Proper SEO and social media sharing with correct URLs
- Fixed build script infinite loop issue

🌐 New URLs:
- GitHub Pages: https://monzurs.me/shamim-devops-portfolio/
- EC2 Direct: https://devopswithmonzur.engineer/ (unchanged)

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -232,7 +232,7 @@ jobs:
         echo "✅ Application build verified"
         echo ""
         echo "🌐 Access Options:"
-        echo "📱 GitHub Pages Demo: https://MonzurElahiShamim.github.io/shamim-devops-portfolio"
+        echo "📱 GitHub Pages Demo: https://monzurs.me/shamim-devops-portfolio"
         echo "☁️  EC2 Production: Ready for deployment"
         echo ""
         echo "🔧 Next Steps:"
