feat: add EC2 deployment support with correct asset paths
- Add DEPLOY_TARGET environment variable to vite.config.ts
- Create build:ec2 script for production builds
- Fix hardcoded GitHub Pages paths in index.html for root domain
- Add automated EC2 deployment script
- Configure base path as '/' for EC2, '/shamim-devops-portfolio/' for GitHub Pages

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:ec2": "DEPLOY_TARGET=ec2 vite build",
     "preview": "vite preview",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
